[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/bold.font" type="BitmapFont" id=1]
[ext_resource path="res://src/scripts/BasePanel.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/SceneView.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="Theme" id=6]

default_font = ExtResource( 1 )
Button/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 0.501961 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 0.784314 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
Label/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
LineEdit/colors/cursor_color = Color( 0.941176, 0.941176, 0.941176, 1 )
LineEdit/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null

[node name="Base" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 6 )
script = ExtResource( 2 )

[node name="Button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 177.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to Map"
flat = true
align = 0

[node name="Scene" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -45.0
margin_right = 177.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Generate Scene"
flat = true
align = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="SceneView" parent="." index="2" instance=ExtResource( 3 )]

visible = false
z_index = -1

[node name="GatherButtons" type="GridContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -640.0
margin_bottom = -349.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
_sections_unfolded = [ "Margin" ]

[node name="ProcessButtons" type="GridContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 350.0
margin_right = -640.0
margin_bottom = -100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
_sections_unfolded = [ "Margin" ]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Scene" to="SceneView" method="_on_Scene_pressed"]

[connection signal="pressed" from="Scene" to="." method="_on_Scene_pressed"]


